--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
     <header>
-        <nav class="pixar">
-            <a href="index.html">Pixar</a>
+        <nav class="flex-enabled">
+            <a href="index.html"><img class="indent" src="images/pixarlogo.png" alt="Pixar Logo"></a>
 
-            <ul>
+            <ul class="Pixar flex-enabled flex-right">
                 <li><a href="https://www.pixar.com/feature-films-launch">Feature Films</a></li>
                 <li><a href="https://www.pixar.com/short-films-1">Short Films</a></li>
                 <li><a href="https://www.pixar.com/renderman">Technology</a></li>
@@ -22,10 +22,9 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <img src="Images/ONWARD.jpg" alt="Onward">
-        <h1>Feature Films</h1>
-
+    <section class="flex-enabled flex-center">
+        <img class="feature-image" src="Images/ONWARD.jpg" alt="Onward">
+        <h1 class="headline pixar floating">Feature Films</h1>
     </section>
 
 
